# tricoach

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs  telemetry.rs
backend/src/ai/: gemini.rs  mod.rs  periodization.rs  rule_based.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/domain/: dto.rs  enums.rs  mod.rs  models.rs
backend/src/notifications/: mod.rs
backend/src/repositories/: device_repo.rs  feedback_repo.rs  mod.rs  plan_repo.rs  profile_repo.rs  schedule_repo.rs  user_repo.rs  workout_repo.rs
backend/src/routes/: auth_routes.rs  device_routes.rs  health.rs  mod.rs  plan_routes.rs  profile_routes.rs  schedule_routes.rs  workout_routes.rs
backend/src/services/: auth_service.rs  mod.rs  plan_service.rs  workout_service.rs
docs/: AUDIT.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/: hooks.ts  theme.ts
mobile/src/api/: client.ts  endpoints.ts  types.ts
mobile/src/components/: WorkoutCard.tsx  ui.tsx
mobile/src/lib/: date.ts
mobile/src/navigation/: RootNavigator.tsx  types.ts
mobile/src/screens/: GeneratePlanScreen.tsx  LoginScreen.tsx  OnboardingScreen.tsx  PlanScreen.tsx  RegisterScreen.tsx  ScheduleScreen.tsx  TodayScreen.tsx  WorkoutDetailScreen.tsx
mobile/src/state/: auth.tsx  storage.ts
