[package]
name = "tricoach"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AI-powered triathlon coaching backend (Axum + SQLx + Postgres)"

[dependencies]
# Web framework & async runtime
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (embedded SQLite — no server to run)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

# HTTP client (Gemini + Expo push)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors & config
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
